hir/src/passes/snapshots/transmute_hir__passes__exit_points_resolver__tests__unary_always_returns.snap
---
source: hir/src/passes/exit_points_resolver.rs
expression: "(ast, block_exit_points)"
---
(
    Ast {
        identifiers: [
            IdentId(0) => "x",
            IdentId(1) => "a",
            IdentId(2) => "minus",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 3:17; [33, 38],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 3:17; [33, 38],
                    },
                ),
                span: 3:17; [33, 38],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 3:26; [42, 46],
                    },
                ),
                span: 3:26; [42, 46],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 3:37; [53, 55],
                    },
                ),
                span: 3:37; [53, 55],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Block(
                    [
                        StmtId(0),
                    ],
                ),
                span: 3:31; [47, 58],
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Literal(
                    Literal {
                        kind: Number(43),
                        span: 3:54; [70, 72],
                    },
                ),
                span: 3:54; [70, 72],
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: Block(
                    [
                        StmtId(1),
                    ],
                ),
                span: 3:48; [64, 75],
            },
            ExprId(6) => Expression {
                id: ExprId(6),
                kind: If(
                    ExprId(1),
                    ExprId(3),
                    Some(
                        ExprId(5),
                    ),
                ),
                span: 3:23; [39, 75],
            },
            ExprId(7) => Expression {
                id: ExprId(7),
                kind: FunctionCall(
                    ExprId(0),
                    [
                        ExprId(6),
                    ],
                ),
                span: 3:17; [33, 76],
            },
            ExprId(8) => Expression {
                id: ExprId(8),
                kind: Literal(
                    Literal {
                        kind: Number(44),
                        span: 4:13; [90, 92],
                    },
                ),
                span: 4:13; [90, 92],
            },
            ExprId(9) => Expression {
                id: ExprId(9),
                kind: Block(
                    [
                        StmtId(2),
                        StmtId(3),
                    ],
                ),
                span: 2:15; [15, 99],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Ret(
                    Some(
                        ExprId(2),
                    ),
                    Explicit,
                ),
                span: 3:33; [49, 56],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Ret(
                    Some(
                        ExprId(4),
                    ),
                    Explicit,
                ),
                span: 3:50; [66, 73],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Let(
                    Identifier {
                        id: IdentId(1),
                        span: 3:13; [29, 30],
                    },
                    ExprId(7),
                ),
                span: 3:9; [25, 77],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Ret(
                    Some(
                        ExprId(8),
                    ),
                    Explicit,
                ),
                span: 4:9; [86, 93],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: LetFn(
                    Identifier {
                        id: IdentId(0),
                        span: 2:9; [9, 10],
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(9),
                ),
                span: 2:5; [5, 99],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(4),
        ],
    },
    [
        (
            ExprId(3),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(2),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
        (
            ExprId(5),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(4),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
        (
            ExprId(9),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(2),
                        ),
                    ),
                    Explicit(
                        Some(
                            ExprId(4),
                        ),
                    ),
                ],
                unreachable: [
                    ExprId(8),
                ],
            },
        ),
    ],
)
