hir/src/passes/snapshots/transmute_hir__passes__exit_points_resolver__tests__while_never_returns.snap
---
source: hir/src/passes/exit_points_resolver.rs
expression: "(ast, block_exit_points)"
---
(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "f",
        ],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 3:15; [31, 35],
                    },
                ),
                span: 3:15; [31, 35],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Block(
                    [],
                ),
                span: 3:20; [36, 39],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: While(
                    ExprId(0),
                    ExprId(1),
                ),
                span: 3:9; [25, 39],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 4:13; [52, 54],
                    },
                ),
                span: 4:13; [52, 54],
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Block(
                    [
                        StmtId(1),
                        StmtId(2),
                    ],
                ),
                span: 2:15; [15, 61],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    None,
                    InputId(0),
                    [
                        StmtId(3),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Expression(
                    ExprId(2),
                ),
                span: 3:9; [25, 39],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Ret(
                    Some(
                        ExprId(3),
                    ),
                    Explicit,
                ),
                span: 4:9; [48, 55],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: LetFn(
                    Identifier {
                        id: IdentId(1),
                        span: 2:9; [9, 10],
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(4),
                ),
                span: 2:5; [5, 61],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
    [
        (
            ExprId(1),
            Output {
                exit_points: [],
                unreachable: [],
            },
        ),
        (
            ExprId(4),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(3),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
    ],
)
